updated add patient route and final touches

--- a/templates/about.html
+++ b/templates/about.html
@@ -101,9 +101,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a></li>
                     
                 </ul>
             </div>
@@ -152,7 +150,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="text-center">
+    <footer class="text-center", id="mainNav">
         <p>&copy; 2024 ELEHERE EHR Information System. All rights reserved.</p>
     </footer>
 
