--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
     <section class="page-section" id="services">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">SERVICES</h2>
+                <h2 class="section-heading text-uppercase", style="color: blue;">SERVICES</h2>
                 <p class="section-subheading text-muted">Explore the powerful features our EHR system offers:</p>
             </div>
             <div class="row">
@@ -55,7 +55,7 @@
                     <div class="card h-100 shadow-sm">
                         <img src="/static/assets/img/demographics.jpg" class="card-img-top" alt="Demographics">
                         <div class="card-body">
-                            <h5 class="card-title">Demographics</h5>
+                            <h5 class="card-title", style="color: blue;">Demographics</h5>
                             <p class="card-text text-muted short-text">
                                 Keep track of patient age, weight, gender, and other essential personal details.
                             </p>
@@ -69,7 +69,7 @@
                                  By gathering comprehensive demographic data, healthcare providers can improve care coordination, support targeted treatments,
                                  and ensure each patient receives holistic, patient-centered care tailored to their background and lifestyle.
                             </p>
-                            <a href="#" class="read-more-link" onclick="toggleText(event)">Read More</a>
+                            <a href="#" class="read-more-link" onclick="toggleText(event)", style="color: blue;">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                     <div class="card h-100 shadow-sm">
                         <img src="/static/assets/img/medications.jpg" class="card-img-top" alt="Medications">
                         <div class="card-body">
-                            <h5 class="card-title">Medications</h5>
+                            <h5 class="card-title", style="color: blue;">Medications</h5>
                             <p class="card-text text-muted short-text">
                                 Effective medication management is vital to ensure patient safety, treatment efficacy...
                             </p>
@@ -95,7 +95,7 @@
                                   This comprehensive approach ensures that all aspects of a patient's medication history are integrated into their care plan for optimal,
                                    individualized treatment.
                             </p>
-                            <a href="#" class="read-more-link" onclick="toggleText(event)">Read More</a>
+                            <a href="#" class="read-more-link" onclick="toggleText(event)", style="color: blue;">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                     <div class="card h-100 shadow-sm">
                         <img src="/static/assets/img/medical-history.jpg" class="card-img-top" alt="Medical History">
                         <div class="card-body">
-                            <h5 class="card-title">Medical History</h5>
+                            <h5 class="card-title", style="color: blue;">Medical History</h5>
                             <p class="card-text text-muted short-text">
                                 Access comprehensive medical history including previous diagnoses and treatments...
                             </p>
@@ -120,7 +120,7 @@
                                    This rich history also aids in preventive care planning, ensuring patients receive timely screenings and vaccinations, 
                                    and supports seamless coordination between providers, fostering a holistic, patient-centered approach to care.
                             </p>
-                            <a href="#" class="read-more-link" onclick="toggleText(event)">Read More</a>
+                            <a href="#" class="read-more-link" onclick="toggleText(event)", style="color: blue;">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-4 text-lg-start">© 2024 EHR Information System</div>
                 <div class="col-lg-4 my-3 my-lg-0">
-                    <a class="btn btn-dark btn-social mx-2" href="https://x.com/OscarKyamuwendo"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-dark btn-social mx-2"  href="https://x.com/OscarKyamuwendo"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/kyamuwendo.oscar/"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/oscar-kyamuwendo-2631b82b0/"><i class="fab fa-linkedin-in"></i></a>
                 </div>
