--- a/templates/add_patient.html
+++ b/templates/add_patient.html
@@ -14,7 +14,7 @@
     <header class="navbar navbar-expand-lg navbar-dark sticky-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#" style="color:#ffc800; font-family:'Courier New', Courier, monospace;">
-                <img src="static/images/logo.jpg" alt="EHR Logo" height="40" class="d-inline-block align-text-top">
+                <img src="static/assets/img/elehere-log.jpg" alt="EHR Logo" height="40" class="d-inline-block align-text-top">
                 ELEHERE
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
